<resources>
    <string name="app_name">VideoEditor</string>
    <string name="create_new_text">Create New</string>
    <string name="video_icon">video icon\t\t\t</string>
    <string name="select_video">Select Video</string>
    <string name="select_video_effects">Select Video Effects</string>
    <string name="insert_text">Insert Text</string>
    <string name="insert_pic">Insert Picture</string>
    <string name="insert_emoji">Insert Emoji</string>
    <string name="insert_gif">Insert Gif</string>
    <string name="apply">Apply</string>
    <string name="enter_text">Enter Text</string>
    <string name="save">SAVE</string>
    <string name="enter_emojis">Insert Emojis</string>
    <string name="select_image">Select Image</string>
    <string name="select_audio">Select Audio</string>
</resources>