<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    tools:context=".SelectVideoActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mt_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="#ffffff" />

    <TextView
        android:id="@+id/welcomeTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/welcome_text_view_bg"
        android:gravity="center"
        android:padding="20dp"
        android:text="Welcome to Video Editor and enjoy editing videos."
        android:textColor="#D1FF00"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/createNewMediaLl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mt_toolbar" />

    <LinearLayout
        android:id="@+id/createNewMediaLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:paddingStart="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/create_new_text"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="@string/create_new_text"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/select_video_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/select_video_ll_white_bg"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/video_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/video_icon"
                    android:src="@drawable/video_file" />

                <TextView
                    android:id="@+id/choseVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:text="@string/select_video"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/select_image_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/select_video_ll_white_bg"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/video_icon"
                    android:src="@drawable/insert_photo"
                    app:tint="#6C2C2C" />

                <TextView
                    android:id="@+id/choseImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:text="@string/select_image"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/select_audio_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/select_video_ll_white_bg"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/audio_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/video_icon"
                    android:src="@drawable/audio" />

                <TextView
                    android:id="@+id/choseAudio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:text="@string/select_audio"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>