<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    tools:context=".EditOperationsPlayerActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#ffffff" />

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saveButton">


        <androidx.media3.ui.PlayerView
            android:id="@+id/playerView"
            android:layout_width="300dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="300dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <RelativeLayout
            android:id="@+id/captureLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.example.videoeditor.collageView.CollageView
                android:id="@+id/collageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </FrameLayout>


    <LinearLayout
        android:id="@+id/video_effects_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/select_video_effects_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/select_video_effects"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/insert_text_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/text_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/insert_text"
                    android:src="@drawable/insert_text"
                    app:tint="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/insert_image_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/pic_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/insert_pic"
                    android:src="@drawable/insert_photo"
                    app:tint="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/insert_emoji_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/emoji_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/insert_emoji"
                    android:src="@drawable/emoji_emotions"
                    app:tint="@color/white" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/insert_gif_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/gif_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/insert_gif"
                    android:src="@drawable/gif"
                    app:tint="@color/white" />


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>